--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,6 @@
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-	// We may need admin capability to mount/unmout.
-	"capAdd": ["SYS_ADMIN"]
+	// We may need privileged permission to mount/unmout.
+	"privileged": true
 }
